--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,22 @@
   "browser_action": {
     "default_icon": "icon.png"
   },
+  "content_scripts": [
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": ["content.js"]
+    }
+  ],
+  "background": {
+    "scripts": [
+      "background.js"
+    ]
+  },
   "permissions": [
     "activeTab",
-    "storage"
+    "storage",
+    "contextMenus"
   ]
 }
